# bitcoin-developer-preview

./: .gitignore  Cargo.toml  LICENSE  README.adoc  dfx.json  docker-compose.yml
canister/: Cargo.toml
canister/src/: main.rs
docker/adapter/: Dockerfile  regtest.json
docker/bitcoind/conf/: bitcoin.conf
examples/: README.adoc
examples/common/: Cargo.toml  candid.did
examples/common/src/: lib.rs  main.rs  types.rs
examples/motoko/: README.adoc
examples/motoko/src/: Main.mo  Types.mo  Utils.mo
examples/rust/: Cargo.toml  README.adoc  build.sh  candid.did
examples/rust/src/: main.rs
scripts/: build-canister.sh  build-example-common.sh  build-example.sh
types/: Cargo.toml
types/src/: lib.rs
