[package]
name = "example-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.27.1"
hex = "0.4.3"
ic-btc-types = { git = "https://github.com/dfinity/bitcoin-library" }
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
serde = "1.0.132"

[dev-dependencies]
bitcoin = { version = "0.27.1", features = ["rand"] }
tempfile = "3.2.0"
