[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
example-common = { path = "../common" }
hex = "0.4.3"
ic-btc-types = { path = "../../types" }
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
serde = "1.0.132"

[dev-dependencies]
bitcoin = { version = "0.27.1", features = ["rand"] }
